# taskmaster-pro

./: .gitignore  azure.yaml  docker-compose.yml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tasks.py
backend/src/: __init__.py  database.py  logging_config.py  main.py
backend/src/api/: __init__.py  tasks.py
backend/src/middleware/: error_handler.py
backend/src/models/: __init__.py  schemas.py  task.py
backend/src/services/: __init__.py  task_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/contract/: __init__.py  test_tasks_crud.py  test_tasks_filter.py  test_tasks_get.py
backend/tests/unit/: __init__.py  test_logging_config.py  test_task_service.py
frontend/: .eslintrc.json  .gitignore  .prettierrc.yml  jest.config.js  tailwind.config.js
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.component.ts
frontend/src/app/components/task-card/: task-card.component.html  task-card.component.scss  task-card.component.ts
frontend/src/app/components/task-dashboard/: task-dashboard.component.html  task-dashboard.component.scss  (+2 more)
frontend/src/app/interceptors/: error.interceptor.ts
frontend/src/app/models/: task.model.ts
frontend/src/app/services/: task.service.ts
frontend/src/environments/: environment.development.ts  environment.ts
hooks/: prepackage.ps1  prepackage.sh
specs/001-taskmaster-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-taskmaster-core/checklists/: requirements.md
specs/001-taskmaster-core/contracts/: openapi.yaml  task-schema.json
(+4 files in other folders)
